
syntax = "proto2";

message SmallGuyPB {
    optional int32 number = 1;
    optional string proverb = 2;
    repeated int32 values = 3;
}

message BigGuyPB {
    repeated SmallGuyPB littles = 1;
    optional int32 bigNumber = 2;
    optional string helloworld = 3;
    optional bool shouldI = 4;
}

message BigResultPB {
    optional bool didIt = 1;
    optional int32 length = 2;
    repeated int32 littleNums = 3;
    repeated string proverbs = 4;
    repeated int32 values = 5;

}